Javadoc; changed string double generator to use valueOf.
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/math/trunk@543079 13f79535-47bb-0310-9956-ffa450edef68